unpackaged/main/default/objects/User/fields/Account_Public_Adj_List__c.field-meta.xml
<CustomField>
    <fullName>Account_Public_Adj_List__c</fullName>
    <formula>Contact.Account.Public_Adj_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Public Adj List</label>
    <type>Checkbox</type>
</CustomField>