unpackaged/main/default/objects/User/fields/FON_No_Direct_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>FON_No_Direct_Contact_Info__c</fullName>
    <formula>IF(AND(Contact.Private_Adj_List_Phone__c==null,Contact.Private_Adj_List_Email__c=null,Contact.Private_Adj_List_fax__c=null),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FON No Direct Contact Info</label>
    <type>Checkbox</type>
</CustomField>