unpackaged/main/default/objects/User/fields/Is_Current_ECCHO_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_ECCHO_Member__c</fullName>
    <formula>IF( Contact.Account.FON_Is_Member__c == true,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current ECCHO Member</label>
    <type>Checkbox</type>
</CustomField>