unpackaged/main/default/objects/User/fields/Is_Direct_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Contact__c</fullName>
    <formula>Contact.FON_Private_Adj_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Direct Contact</label>
    <type>Checkbox</type>
</CustomField>