unpackaged/main/default/objects/User/fields/OrderApi__Shopping_Cart_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shopping_Cart_ID__c</fullName>
    <label>FONTEVA SYSTEM FIELD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>