unpackaged/main/default/objects/User/fields/PagesApi__Is_Federated_User__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Federated_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Federated User</label>
    <type>Checkbox</type>
</CustomField>