unpackaged/main/default/objects/User/fields/PagesApi__Profile_Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Profile_Cover_Image__c</fullName>
    <description>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</description>
    <inlineHelpText>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</inlineHelpText>
    <label>Profile Cover Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>